move base less back into index, fix nav whitespace and overflow

--- a/style/index.less
+++ b/style/index.less
@@ -1,7 +1,39 @@
-/*** BASE */
+/*** INIT */
 @import "variables";
 @import "reset";
-@import "base";
+
+/*** BASE */
+body {
+	background: @base;
+	color: @main;
+	font-family: @copy;
+	font-size: @typeset;
+	line-height: @baseline;
+	-webkit-font-smoothing: antialiased;
+}
+::selection {
+	background-color: @accent;
+	color: @base;
+}
+#content {
+	padding: 5em 0;
+	width: 100%;
+}
+
+/*** COMPONENTS */
+@import "layout";
+@import "typography";
+@import "nav";
+@import "intro";
+
+/*** EXPERIMENTS */
+@import "annihilation";
+@import "swiper";
+@import "keypad";
+
+/*** MEDIA */
+@import "screen";
+@import "print";
 
 /*** THEME */
 // @import "theme-name";
