--- a/style/nav.less
+++ b/style/nav.less
@@ -49,11 +49,11 @@ logo {
 }
 
 links {
-	overflow-x: scroll;
+	overflow-x: auto;
 	ul {
 		display: inline-block;
 		padding: 0;
-		width: 20em;
+		white-space: nowrap;
 		li {
 			display: inline-block;
 			margin-right: 1em;
